--- a/app/src/main/res/layout/activity_credential.xml
+++ b/app/src/main/res/layout/activity_credential.xml
@@ -20,6 +20,8 @@
         android:id="@+id/editText6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="18dp"
         android:layout_marginStart="18dp"
@@ -45,8 +47,10 @@
         android:id="@+id/editText7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/editText6"
-        android:layout_alignRight="@+id/editText6"
+        android:layout_alignLeft="@+id/editText6"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignStart="@+id/editText6"
         android:layout_below="@+id/editText6"
         android:layout_marginTop="63dp"
         android:ems="10"
@@ -54,12 +58,10 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText7"
         android:layout_marginTop="74dp"
-        android:layout_toEndOf="@+id/textView9"
-        android:layout_toRightOf="@+id/textView9"
         android:onClick="OnClick"
         android:text="Login" />
 </RelativeLayout>
