--- a/app/src/main/res/layout/activity_ratings_details.xml
+++ b/app/src/main/res/layout/activity_ratings_details.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/propertylist"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.avneet.project.View_Property">
+    android:id="@+id/ratingdet"
+    android:layout_height="match_parent"
+    tools:context="com.example.avneet.project.RatingsDetails">
+
 
 </LinearLayout>
