--- a/app/src/main/res/layout/activity_search_prop.xml
+++ b/app/src/main/res/layout/activity_search_prop.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/Linear"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/searchlinear"
     android:orientation="vertical"
-    tools:context="com.example.avneet.project.view_main">
-
+    android:layout_height="match_parent"
+    tools:context="com.example.avneet.project.SearchProp">
 
     <ImageView
         android:id="@+id/imageView4"
@@ -27,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.106" />
 
-    <TextView
+      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="WELCOME" />
