--- a/app/src/main/res/layout/activity_view_prop_det.xml
+++ b/app/src/main/res/layout/activity_view_prop_det.xml
@@ -7,17 +7,34 @@
     android:orientation="vertical"
     tools:context="com.example.avneet.project.View_prop_det">
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
-    <ImageView
-        android:id="@+id/imgView"
+    <GridView
+        android:id="@+id/gridView1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:stretchMode="columnWidth"
+        android:textAlignment="center">
 
-    </ImageView>
+    </GridView>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/cl"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="CLOSE" />
+        <Button
+            android:id="@+id/del"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            android:background="@color/colorAccent"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="DELETE PROPERTY" />
+    </LinearLayout>
 </LinearLayout>
